--- a/modules/Application/src/Application/layouts/home.phtml
+++ b/modules/Application/src/Application/layouts/home.phtml
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
-    <title>Timeline JS Example</title>
+    <title>Timeline JS Timefront</title>
     <meta charset="utf-8">
     <meta name="description" content="TimelineJS example">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -19,8 +19,6 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
   <body>
-  	<div class="container">      
-        <?=$view;?>        
-    </div> <!-- /container -->
+      <?= $view; ?>
   </body>
 </html>
